--- a/pages/about.module.scss
+++ b/pages/about.module.scss
@@ -7,25 +7,30 @@
     gap: 5px;
     flex-wrap: nowrap;
     position: relative;
-    left: -2px;
 
     &_text {
         display: flex;
         flex-direction: column;
         align-items: center;
-        p {
-            text-align: center;
-        }
     }
 
     button {
-        margin-top: 50px;
+        padding: 8px 20px;
+        border-radius: 5px;
+        box-shadow: 0 2px 5px 0 rgba(0,0,0,0.2), 0 6px 5px 0 rgba(0,0,0,0.19);
+        text-transform: uppercase;
+        outline: none;
+
+        &:hover {
+            outline: 2px solid variables.$accent_color;
+        }
     }
 }
 
 .headshot {
     border: 2px solid variables.$accent_color;
     border-radius: 50%;
+    position: relative;
 }
 
 .work_info_box {
@@ -34,10 +39,10 @@
 }
 
 .about_container {
-    height: 100vh;
     display: flex;
     flex-direction: column;
     justify-content:flex-start;
     align-items: center;
     gap: 100px;
+    height: 95vh;
 }
